mod:fotos-unidade

--- a/index.html
+++ b/index.html
@@ -207,28 +207,37 @@
                                     <ul class="sub-funcionarios">
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Estagiário</span>
+                                                <img src="imagens/nataly.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Nataly</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
+                                        </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Estagiário</span>
+                                                <img src="imagens/adna.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Adna</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
+                                        </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Estagiário</span>
+                                                <img src="imagens/brenda.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Brenda</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
+                                        </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Estagiário</span>
+                                                <img src="imagens/sâmara.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Sâmara</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
+                                        </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Estagiário</span>
+                                                <img src="imagens/yasmin tilch.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Yasmin</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
                                         </li>
                                     </ul>
@@ -236,7 +245,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--UNIDADE DE CONCILIAÇÃO-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
