mod:foto-citran

--- a/index.html
+++ b/index.html
@@ -310,22 +310,15 @@
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <img src="imagens/jackson.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">jackson</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">?</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--SINE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -342,14 +335,14 @@
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <img src="imagens/guilherme.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Guilherme</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <img src="imagens/kayo.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Kayo</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
@@ -357,7 +350,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--CITRAN-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
