mod:foto-receita

--- a/index.html
+++ b/index.html
@@ -360,21 +360,21 @@
                     <ul class="coordenadores">
                         <li class="tree-node">
                             <a href="#" class="node-link coordenador">
-                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <img src="imagens/lucas.jpg" alt="Coordenador Image" class="node-image">
                                 <span class="node-label">Lucas</span>
                                 <p class="node-label-cargo">SERVIDOR</p>
                             </a>
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
-                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
+                                        <img src="imagens/maria meyer.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Maria</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
-                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
+                                        <img src="imagens/alanna.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Alanna</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
@@ -382,7 +382,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--SAMAE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -399,7 +399,7 @@
                             <ul class="coordenadores">
                                 <li class="tree-node">
                                     <a href="#" class="node-link coordenador">
-                                        <img src="imagens/vanessa.jpg" alt="Coordenador Image" class="node-image">
+                                        <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
                                         <span class="node-label">?</span>
                                         <p class="node-label-cargo">AUX. ADMINISTRATIVA</p>
                                     </a>
@@ -411,7 +411,7 @@
                                     <ul class="funcionarios">
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="" alt="Employee Image" class="node-image">
+                                                <img src="imagens/alicia.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Alicia</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
