upd:estagiario-demutran

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link funcionario">
+                                            <img src="imagens/kriscia.jpg" alt="Funcionario 1 Image" class="node-image">
+                                            <span class="node-label">Kriscia</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -418,35 +425,35 @@
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/amanda.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Amanda</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/yasmin pacheco.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Yasmin</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/raquel.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Raquel</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/jenifer.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Jenifer</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/gabriel eucker.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Gabriel</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
@@ -456,7 +463,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--SAMAE-->
                 <ul class="tree-root-general">
                     <a href="#" class="node-link-chefe">
                         <img src="imagens/joão marcelo.jpg" alt="Employee Image" class="node-image">
@@ -472,49 +479,49 @@
                         <ul class="funcionarios">
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/ana clara.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Ana Clara</span>
                                     <p class="node-label-cargo">ESTAGIÁRIA</p>
                                 </a>
                             </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/kaique.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Kaique</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
                             </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/leonardo.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Leonardo</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
                             </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/jhonatan.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Jhonatan</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
                             </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/gabriela tamanini.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Gabriela</span>
                                     <p class="node-label-cargo">ESTAGIÁRIA</p>
                                 </a>
                             </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/rafaela.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Rafaela</span>
                                     <p class="node-label-cargo">ESTAGIÁRIA</p>
                                 </a>
                             </li>
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                    <img src="imagens/kaiki.jpg" alt="Employee Image" class="node-image">
                                     <span class="node-label">Kaiki</span>
                                     <p class="node-label-cargo">ESTAGIÁRIO</p>
                                 </a>
@@ -528,8 +535,7 @@
                             <p class="node-label-cargo">PARCEIRO</p>
                         </a>
                     </li>
-                </ul>
-                </li>
+                </ul> <!--Receita e Junta-->
                 <ul class="tree-root-general">
                     <a href="#" class="node-link-chefe">
                         <img src="imagens/chantelli.jpg" alt="Employee Image" class="node-image">
@@ -549,6 +555,15 @@
                                     <span class="node-label">Francisca</span>
                                     <p class="node-label-cargo">SERVIDORA</p>
                                 </a>
+                                <ul class="sub-funcionarios">
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/leonardo bertolo.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Leonardo</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </li>
@@ -633,7 +648,7 @@
                             </li>
                         </ul>
                     </li>
-                </ul>
+                </ul> <!--Demutran e Identidade-->
             </ul>
         </div>
     </div>
