upd: setor icasa

--- a/index.html
+++ b/index.html
@@ -329,6 +329,22 @@
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">ICASA</span>
+                        <p class="node-label-cargo">PARCEIRO</p>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/Regiane.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Regiane</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li> <!--ICASA-->
+                <li class="tree-node parceiro-setor">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">Citran</span>
                         <p class="node-label-cargo">PARCEIRO</p>
                     </a>
