upd:setor foto cnh

--- a/index.html
+++ b/index.html
@@ -345,6 +345,45 @@
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Epagri</span>
+                        <p class="node-label-cargo">PARCEIRO</p>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Katia</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Valdomiro</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li> <!--Epagri-->
+                <li class="tree-node parceiro-setor">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Foto CNH</span>
+                        <p class="node-label-cargo">PARCEIRO</p>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/vanessa orela.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Vanessa</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li> <!--Foto CNH-->
+                <li class="tree-node parceiro-setor">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">Citran</span>
                         <p class="node-label-cargo">PARCEIRO</p>
                     </a>
