upd: setor tributos

--- a/index.html
+++ b/index.html
@@ -195,6 +195,51 @@
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">TRIBUTOS</span>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/kerly.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">KERLY</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/tersilio.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">tersilio</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/emanuel.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Emanuel</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/vinicius.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Vinicius</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/ricardo.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Ricardo</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li> <!--TRIBUTOS-->
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">Unidade de Conciliação</span>
                     </a>
                     <ul class="coordenadores">
